--- a/templates/form.html
+++ b/templates/form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div class="page">
     <h2>Get your taste profile!</h2>
     <form action="/predict" method="post">
         <label>Age: <input type="number" name="age" /></label><br>
@@ -40,5 +41,6 @@
         </label><br>
         <button type="submit">Submit</button>
     </form>
+    </div>
 </body>
 </html>
