--- a/templates/form.html
+++ b/templates/form.html
@@ -9,7 +9,7 @@
     <div class="page">
     <h2>Get your taste profile!</h2>
     <form action="/predict" method="post">
-        <label>Age: <input type="number" name="age" /></label><br>
+        <label>Age: <input type="number" name="age" required/></label><br>
         <label>Sleep Cycle:
             <select name="sleep_cycle">
                 <option value="Early Bird">Early Bird</option>
